--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,16 @@
 header {
     display: flex;
-    justify-content: space-between;
-    padding: 0 100px;
+    justify-content: center;
+    width: 100%;
     align-items: center;
     height: 80px;
     width: 100%;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    width: 1150px;
 }
 
 .end-header {
