--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -17,6 +17,12 @@
     height: 340px;
 }
 
+.card-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .un-stock {
     display: flex;
     justify-content: center;
@@ -26,18 +32,17 @@
     height: 100%;
     font-weight: 400;
     font-size: 24px;
-    background: rgba(196, 196, 196, .2);
     color: rgba(141, 143, 154, 1);
 }
 
-.card img {
-    width: 100%;
-    height: 100%;
+.card-img > img{
+    width: 350px;
+    height: 340px;
     object-fit: cover;
 }
 
 .un-stock-card img {
-    opacity: .6;
+    opacity: 0.5;
 }
 
 .card-content {
@@ -61,4 +66,26 @@
 
 .un-stock-card .card-price {
     color:rgba(141, 143, 154, 1)
+}
+
+.shopping-cart-card {
+    position: absolute;
+    bottom: -25px;
+    padding: 14px;
+    background: #5ECE7B;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 15px;
+    opacity: 0;
+    transition: .2s all;
+}
+
+.shopping-cart-card img {
+    color: #fff;
+}
+
+.card:hover .shopping-cart-card {
+    opacity: 1;
 }
