--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,9 @@
 header {
     display: flex;
     justify-content: center;
-    width: 100%;
     align-items: center;
     height: 80px;
+    background: #fff;
     width: 100%;
 }
 
@@ -11,6 +11,10 @@ header {
     display: flex;
     justify-content: space-between;
     width: 1150px;
+}
+
+.header-navigation a {
+    text-transform: uppercase;
 }
 
 .end-header {
