--- a/src/components/pages/ProductPage/productPage.css
+++ b/src/components/pages/ProductPage/productPage.css
@@ -92,6 +92,11 @@
     border: none;
 }
 
+.add-btn:disabled {
+    cursor: not-allowed;
+    opacity: .5;
+}
+
 .product-page-description {
     width: 300px;
     margin-top: 40px;
