--- a/src/components/Header/CurrenciesSwitcher/currencies.css
+++ b/src/components/Header/CurrenciesSwitcher/currencies.css
@@ -1,6 +1,7 @@
 .drop-down-currency {
     position: relative;
     display: flex;
+    cursor: pointer;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
@@ -10,7 +11,6 @@
 
 .current-value {
     position: relative;
-    cursor: pointer;
     margin-right: 20px;
 }
 
@@ -51,6 +51,7 @@
 
 .drop-down-content-value {
     cursor: pointer;
+    list-style: none;
     padding: 20px 20px 10px 20px;
 }
 
