--- a/src/components/pages/ProductPage/productPage.css
+++ b/src/components/pages/ProductPage/productPage.css
@@ -17,11 +17,13 @@
     flex-direction: column;
 }
 .product-page-img-list li{
+    list-style: none;
     width: 80px;
     height: 80px;
     margin-bottom: 40px;
     cursor: pointer;
 }
+
 .product-page-img-list li img {
     width: 100%;
     height: 100%;
@@ -113,6 +115,10 @@
     border: 1px solid #000;
 }
 
+.product-page-stock {
+    margin-top: 50px;
+    color: red;
+}
 
 .product-page .options.selected {
     background: #000;
